--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.3",
     "buffer": "^6.0.3",
     "cogo-toast": "^4.2.3",
+    "export-from-json": "^1.7.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
