--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cogo-toast": "^4.2.3",
     "export-from-json": "^1.7.2",
     "html-to-image": "^1.11.11",
+    "localforage": "^1.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
