--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "localforage": "^1.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-code-input": "^3.10.1",
     "react-dom": "^18.2.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.8.0",
