--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "buffer": "^6.0.3",
+    "cleave.js": "^1.6.0",
     "cogo-toast": "^4.2.3",
     "export-from-json": "^1.7.2",
     "html-to-image": "^1.11.11",
